# gripper

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json
references/: README.md  夹爪控制系统 设计方案更改.md
references/00_context/: 2026-05-15_context_handoff.md  current_workspace_inventory.md
references/01_requirements/: 夹爪PC测试UI说明.md  夹爪控制系统联调归档.md  夹爪控制系统设计.md  夹爪控制系统重构准备清单.md
references/02_mechanics/: gripper_check.py  夹爪机构计算校核.md  夹爪样机测试验证方案.md  夹爪结构研究归档.md
references/02_mechanics/motion_curves/: gripper_motion_curves.csv  gripper_motion_curves.m  gripper_motion_curves_csv.py  gripper_motion_curves_plot.py  gripper_motion_curves_svg.py
references/03_control/: control_architecture_design.md  control_refactor_notes.md  generic_dual_hard_stop_axis_control_library_architecture.md  gripper_control_architecture_v2.md
references/03_control/source_snapshot/gripper_control/: README.md  __init__.py  contact_jam_detector.cpp  contact_jam_detector.hpp  force_command_mapper.cpp  force_command_mapper.hpp  friction_identifier.cpp  friction_identifier.hpp  gripper_controller.cpp  gripper_controller.hpp  motor_interface.hpp  safety_limiter.cpp  safety_limiter.hpp  simulated_motor.cpp  simulated_motor.hpp  types.cpp  types.hpp
references/03_control/source_snapshot/gripper_control/damiao/: can_bus.hpp  dm_j4310_motor.cpp  dm_j4310_motor.hpp  dm_j4310_protocol.cpp  dm_j4310_protocol.hpp
references/03_control/source_snapshot/gripper_control/ui/: __init__.py  gripper_control_ui.py
references/04_hardware/: cpp_bringup_can_probe_update_2026-05-20.md  hardware_reference_notes.md  real_hardware_test_issue_log_2026-05-20.md
references/04_hardware/DM_DeviceSDK/C&C++/: USAGE.md
references/04_hardware/DM_DeviceSDK/C&C++/example/v1.0.0/: CMakeLists.txt
references/04_hardware/DM_DeviceSDK/C&C++/example/v1.0.0/src/: main.cpp
references/04_hardware/DM_DeviceSDK/CSharp/: README.md
references/04_hardware/DM_DeviceSDK/CSharp/demo/: Program.cs  (+1 more)
references/04_hardware/dm_usb2fdcan/: USB2CANFD_Dual_README.md  USB2CANFD_README.en.md  USB2CANFD_README.md  USB2CANFD_SDK_README.md  USB2CANFD_SDK_UPDATE.md  USB2CANFD_SETUP.md
references/04_hardware/openarm_can_ref/: CMakeLists.txt
references/04_hardware/protocol_refs/: DM_DeviceSDK_C_CPP_README.md  DM_DeviceSDK_C_CPP_UPDATE.md  DM_DeviceSDK_Python_README.md  DM_DeviceSDK_README.en.md  DM_DeviceSDK_README.md  DM_DeviceSDK_python_demo.py  dmcan_sdk-1.0.4-py3-none-any.whl  legacy_usb2canfd_python_USAGE.md
references/05_build_test/: CMakeLists.txt  build_notes.md  current_build_requirements.md  gripper_control_demo.cpp  gripper_control_unit_tests.cpp  requirements.txt
references/06_implementation/: clamp_speed_mode_update_2026-05-16.md  control_function_completion_2026-05-20.md  controller_interface_first_implementation_plan.md  full_implementation_pass_2026-05-16.md  pre_self_check_final_archive_2026-05-26.md  pre_self_check_implementation_2026-05-20.md  sub_agent_execution_plan.md  v2_incremental_implementation_plan.md
references/07_standards/: project_coding_standards.md
references/07_ui/: web_ui_test_guide_2026-05-20.md
references/08_review/: ai_preliminary_review_2026-05-16.md  human_design_review_pack.md  source_comment_improvement_tasks.md  stage1_architecture_interface_review_2026-05-19.md
references/archive/: 2026-05-22_control_architecture_design_v1_legacy.md  2026-05-22_controller_interface_first_implementation_plan_v1_legacy.md
scripts/: build.ps1  test.ps1
src/app/: application.cpp  application.hpp  main.cpp
src/commander/: command_dispatcher.cpp  command_dispatcher.hpp  command_line.cpp  command_line.hpp
src/common/: error_code.hpp  logging.hpp  project_defs.hpp  result.hpp  timestamp.hpp  units.hpp
src/config/: config_loader.cpp  config_loader.hpp  default_gripper.yaml  gripper_config.hpp
src/controller/: gripper_controller.cpp  gripper_controller.hpp  gripper_types.hpp
src/controller/calibration/: force_mapper.cpp  force_mapper.hpp
src/controller/mechanism/: gripper_kinematics.cpp  gripper_kinematics.hpp
src/controller/nut_position_encoder/: nut_position_encoder.cpp  nut_position_encoder.hpp
src/controller/safety/: contact_jam_detector.cpp  contact_jam_detector.hpp  debug_constraint_policy.cpp  debug_constraint_policy.hpp  safety_limiter.cpp  safety_limiter.hpp
src/controller/self_check/: friction_anomaly_map.cpp  friction_anomaly_map.hpp  friction_identifier.cpp  friction_identifier.hpp  motion_health_checker.cpp  motion_health_checker.hpp  self_check_manager.cpp  self_check_manager.hpp  structure_parameter_identifier.cpp  structure_parameter_identifier.hpp  structure_profile.hpp  travel_limit_identifier.cpp  travel_limit_identifier.hpp
src/controller/state_machine/: active_stop_state.hpp  clamp_state.hpp  fault_state.hpp  gripper_state_machine.cpp  gripper_state_machine.hpp  homing_state.hpp  motion_health_check_state.hpp  release_state.hpp  self_check_state.cpp  self_check_state.hpp  travel_learning_state.hpp
src/hardware_interface/: adapter_types.hpp  can_frame.hpp  motor_interface.hpp  motor_types.hpp  transport_interface.hpp  virtual_encoder.cpp  virtual_encoder.hpp
src/hardware_interface/damiao/: damiao_motor.cpp  damiao_motor.hpp  damiao_protocol.cpp  damiao_protocol.hpp  dm_usb2fdcan_transport.cpp  dm_usb2fdcan_transport.hpp
src/hardware_interface/simulated/: simulated_motor.cpp  simulated_motor.hpp
src/ui/: main_window.cpp  main_window.hpp  runtime_log_model.cpp  runtime_log_model.hpp  ui_controller.cpp  ui_controller.hpp  ui_view_model.hpp  web_server.cpp  web_server.hpp
src/ui/prototype/: admin_recovery_ui_preview.html
src/utils/: filter_utils.cpp  filter_utils.hpp  geometry_utils.cpp  geometry_utils.hpp  interpolation.cpp  interpolation.hpp  math_utils.cpp  math_utils.hpp
test/: test_damiao_protocol.cpp  test_debug_constraint_policy.cpp  test_friction_anomaly_map.cpp  test_gripper_workflow.cpp  test_hardware_selfcheck.cpp  test_motor_bringup.cpp  test_nut_position_encoder.cpp  test_safety_limiter.cpp  test_state_machine.cpp  test_utils.hpp  test_virtual_encoder.cpp
(+7 files in other folders)
